...

    fun iniciarSesion() {
        val correo = _uiState.value.correo.trim()
        val pass = _uiState.value.contrasena

        if (correo.isBlank() || pass.isBlank()) {
            _uiState.update { it.copy(errorLogin = "Ingresa correo y contraseña") }
            return
        }

        viewModelScope.launch(Dispatchers.IO) {
            _uiState.update { it.copy(isLoading = true) }
            val usuario = repository.login(correo, pass)
...
